[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "imageprocessing"
version = "0.1.0"
description = "Image Processing Library"
authors = [
    { name="Tu NGUYEN", email="nhttu82@gmail.com" }
]
readme = "README.md"
license = { file="LICENSE" }
dependencies = []

[project.urls]
"Homepage" = "https://github.com/TuNguyen82/ImageProcessing"
